@@ -1,11 +1,14 @@
-package com.unqiuehire.kashflow.serviceimpl;
+package com.unqiuehire.kashflow.serviceImpl;
 
 import com.unqiuehire.kashflow.constant.ApiStatus;
 import com.unqiuehire.kashflow.constant.BorrowerConstants;
 import com.unqiuehire.kashflow.dto.requestdto.BorrowerRequestDto;
 import com.unqiuehire.kashflow.dto.responsedto.ApiResponse;
 import com.unqiuehire.kashflow.dto.responsedto.BorrowerResponseDto;
+import com.unqiuehire.kashflow.dto.responsedto.LoanApplicationResponseDto;
 import com.unqiuehire.kashflow.entity.Borrower;
+import com.unqiuehire.kashflow.entity.LoanApplication;
+import com.unqiuehire.kashflow.exception.ResourceNotFoundException;
 import com.unqiuehire.kashflow.repository.BorrowerRepository;
 import com.unqiuehire.kashflow.service.BorrowerService;
 import lombok.RequiredArgsConstructor;
@@ -23,132 +26,140 @@ public class BorrowerServiceImpl implements BorrowerService {
     private final BorrowerRepository repo;
 
     @Override
-    public ApiResponse<BorrowerResponseDto> createBorrower(BorrowerRequestDto borrowerRequestDto) {
-        Borrower borrower = mapToEntity(borrowerRequestDto);
-        Borrower savedBorrower = repo.save(borrower);
+    public ApiResponse<BorrowerResponseDto> createBorrower(BorrowerRequestDto dto) {
+        Borrower borrower = mapToEntity(dto);
+        Borrower saved = repo.save(borrower);
 
-        return new ApiResponse<>(
-                ApiStatus.SUCCESS,
+        return new ApiResponse<>(ApiStatus.SUCCESS,
                 BorrowerConstants.BORROWER_CREATED.getMessage(),
-                mapToResponse(savedBorrower)
-        );
+                mapToResponse(saved));
     }
 
     @Override
     public ApiResponse<BorrowerResponseDto> getBorrowerById(Long borrowerId) {
-        Optional<Borrower> optionalBorrower = repo.findById(borrowerId);
+        Borrower borrower = repo.findById(borrowerId)
+                .orElseThrow(() -> new ResourceNotFoundException("Borrower not found"));
 
-        if (optionalBorrower.isEmpty()) {
-            return new ApiResponse<>(
-                    ApiStatus.FAILURE,
-                    BorrowerConstants.BORROWER_NOT_FOUND.getMessage(),
-                    null
-            );
-        }
-
-        Borrower borrower = optionalBorrower.get();
-
-        return new ApiResponse<>(
-                ApiStatus.SUCCESS,
+        return new ApiResponse<>(ApiStatus.SUCCESS,
                 BorrowerConstants.BORROWER_FOUND.getMessage(),
-                mapToResponse(borrower)
-        );
+                mapToResponse(borrower));
     }
 
     @Override
     public ApiResponse<List<BorrowerResponseDto>> getAllBorrowers() {
-        List<BorrowerResponseDto> borrowerList = repo.findAll()
+        List<BorrowerResponseDto> list = repo.findAll()
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
 
-        return new ApiResponse<>(
-                ApiStatus.SUCCESS,
+        return new ApiResponse<>(ApiStatus.SUCCESS,
                 BorrowerConstants.BORROWERS_FOUND.getMessage(),
-                borrowerList
-        );
+                list);
     }
 
     @Override
-    public ApiResponse<BorrowerResponseDto> updateBorrower(Long borrowerId, BorrowerRequestDto borrowerRequestDto) {
-        Optional<Borrower> optionalBorrower = repo.findById(borrowerId);
+    public ApiResponse<BorrowerResponseDto> updateBorrower(Long borrowerId, BorrowerRequestDto dto) {
 
-        if (optionalBorrower.isEmpty()) {
-            return new ApiResponse<>(
-                    ApiStatus.FAILURE,
-                    BorrowerConstants.BORROWER_NOT_FOUND.getMessage(),
-                    null
-            );
-        }
+        Borrower borrower = repo.findById(borrowerId)
+                .orElseThrow(() -> new ResourceNotFoundException("Borrower not found"));
 
-        Borrower existingBorrower = optionalBorrower.get();
+        borrower.setBorrowerName(dto.getBorrowerName());
+        borrower.setCibil(dto.getCibil());
+        borrower.setPhoneNumber(dto.getPhoneNumber());
+        borrower.setPassword(dto.getPassword());
+        borrower.setDateOfBirth(LocalDate.parse(dto.getDateOfBirth()));
+        borrower.setAddress(dto.getAddress());
+        borrower.setIsActive(dto.getIsActive());
+        borrower.setPincode(dto.getPincode());
 
-        existingBorrower.setBorrowerName(borrowerRequestDto.getBorrowerName());
-        existingBorrower.setCibil(borrowerRequestDto.getCibil());
-        existingBorrower.setPhoneNumber(borrowerRequestDto.getPhoneNumber());
-        existingBorrower.setPassword(borrowerRequestDto.getPassword());
-        existingBorrower.setDateOfBirth(LocalDate.parse(borrowerRequestDto.getDateOfBirth()));
-        existingBorrower.setAddress(borrowerRequestDto.getAddress());
-        existingBorrower.setIsActive(borrowerRequestDto.getIsActive());
-        existingBorrower.setPincode(borrowerRequestDto.getPincode());
+        Borrower updated = repo.save(borrower);
 
-        Borrower updatedBorrower = repo.save(existingBorrower);
-
-        return new ApiResponse<>(
-                ApiStatus.SUCCESS,
+        return new ApiResponse<>(ApiStatus.SUCCESS,
                 BorrowerConstants.BORROWER_UPDATED.getMessage(),
-                mapToResponse(updatedBorrower)
-        );
+                mapToResponse(updated));
     }
 
     @Override
     public ApiResponse<String> deleteBorrower(Long borrowerId) {
-        Optional<Borrower> optionalBorrower = repo.findById(borrowerId);
 
-        if (optionalBorrower.isEmpty()) {
-            return new ApiResponse<>(
-                    ApiStatus.FAILURE,
+        if (!repo.existsById(borrowerId)) {
+            return new ApiResponse<>(ApiStatus.FAILURE,
                     BorrowerConstants.BORROWER_NOT_FOUND.getMessage(),
-                    null
-            );
+                    null);
         }
 
         repo.deleteById(borrowerId);
 
-        return new ApiResponse<>(
-                ApiStatus.SUCCESS,
+        return new ApiResponse<>(ApiStatus.SUCCESS,
                 BorrowerConstants.BORROWER_DELETED.getMessage(),
-                "Deleted borrower with id: " + borrowerId
-        );
+                "Deleted borrower with id: " + borrowerId);
+    }
+
+    // Get Applications of Borrower
+    @Override
+    public ApiResponse<List<LoanApplicationResponseDto>> getApplications(Long borrowerId) {
+
+        Borrower borrower = repo.findById(borrowerId)
+                .orElseThrow(() -> new ResourceNotFoundException("Borrower not found"));
+
+        List<LoanApplicationResponseDto> list = borrower.getApplications()
+                .stream()
+                .map(this::mapToApplicationDto)
+                .toList();
+
+        return new ApiResponse<>(ApiStatus.SUCCESS, "Fetched", list);
+    }
+
+    // ================= MAPPERS =================
+
+    private Borrower mapToEntity(BorrowerRequestDto dto) {
+        Borrower borrower = new Borrower();
+
+        borrower.setBorrowerName(dto.getBorrowerName());
+        borrower.setCibil(dto.getCibil());
+        borrower.setPhoneNumber(dto.getPhoneNumber());
+        borrower.setPassword(dto.getPassword());
+        borrower.setDateOfBirth(LocalDate.parse(dto.getDateOfBirth()));
+        borrower.setAddress(dto.getAddress());
+        borrower.setIsActive(dto.getIsActive());
+        borrower.setPincode(dto.getPincode());
+
+        return borrower;
     }
 
     private BorrowerResponseDto mapToResponse(Borrower borrower) {
-        BorrowerResponseDto responseDto = new BorrowerResponseDto();
+        BorrowerResponseDto dto = new BorrowerResponseDto();
 
-        responseDto.setBorrowerId(borrower.getBorrowerId());
-        responseDto.setBorrowerName(borrower.getBorrowerName());
-        responseDto.setCibil(borrower.getCibil());
-        responseDto.setPhoneNumber(borrower.getPhoneNumber());
-        responseDto.setDateOfBirth(String.valueOf(borrower.getDateOfBirth()));
-        responseDto.setAddress(borrower.getAddress());
-        responseDto.setIsActive(borrower.getIsActive());
-        responseDto.setPincode(borrower.getPincode());
+        dto.setBorrowerId(borrower.getBorrowerId());
+        dto.setBorrowerName(borrower.getBorrowerName());
+        dto.setCibil(borrower.getCibil());
+        dto.setPhoneNumber(borrower.getPhoneNumber());
+        dto.setDateOfBirth(String.valueOf(borrower.getDateOfBirth()));
+        dto.setAddress(borrower.getAddress());
+        dto.setIsActive(borrower.getIsActive());
+        dto.setPincode(borrower.getPincode());
 
-        return responseDto;
+        return dto;
     }
 
-    private Borrower mapToEntity(BorrowerRequestDto borrowerRequestDto) {
-        Borrower borrower = new Borrower();
+    private LoanApplicationResponseDto mapToApplicationDto(LoanApplication app) {
+        LoanApplicationResponseDto dto = new LoanApplicationResponseDto();
 
-        borrower.setBorrowerName(borrowerRequestDto.getBorrowerName());
-        borrower.setCibil(borrowerRequestDto.getCibil());
-        borrower.setPhoneNumber(borrowerRequestDto.getPhoneNumber());
-        borrower.setPassword(borrowerRequestDto.getPassword());
-        borrower.setDateOfBirth(LocalDate.parse(borrowerRequestDto.getDateOfBirth()));
-        borrower.setAddress(borrowerRequestDto.getAddress());
-        borrower.setIsActive(borrowerRequestDto.getIsActive());
-        borrower.setPincode(borrowerRequestDto.getPincode());
+        dto.setApplicationId(app.getApplicationId());
 
-        return borrower;
+        dto.setBorrowerId(app.getBorrower().getBorrowerId());
+
+        dto.setLenderId(app.getLender().getLenderId());
+
+        dto.setPlanId(app.getPlanId());
+        dto.setLoanAmount(app.getLoanAmount());
+        dto.setStatus(app.getStatus().name());
+
+
+        if (app.getApplicationDate() != null) {
+            dto.setApplicationDate(app.getApplicationDate().toString());
+        }
+
+        return dto;
     }
 }
